# peerfolio-ironclaw

./: README.md
contact-discovery/: Cargo.toml  README.md  contact-discovery.capabilities.json
contact-discovery/src/: lib.rs
contact-discovery/wit/: tool.wit
contact-tokenizer/: Cargo.toml  README.md  contact-tokenizer.capabilities.json
contact-tokenizer/src/: lib.rs
