[package]
name = "peerfolio-contact-tokenizer"
version = "0.1.0"
edition = "2021"
description = "Peerfolio contact tokenization tool for IronClaw"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hmac = "0.12"
indexmap = "=2.2.6" # Keep wit-bindgen transitives compatible with Cargo 1.82.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
spdx = "=0.10.8" # Keep wit-bindgen transitives compatible with Cargo 1.82.
wit-bindgen = "=0.36"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[workspace]
